# gke-scale-to-zero

./: README.md  message.json  pyproject.toml
src/: main.py
