[tool.poetry]
name = "gke-scale-to-zero"
version = "0.1.0"
description = ""
authors = ["Hans Rauer <h.w.rauer@googlemail.com>"]
readme = "README.md"
packages = [{include = "gke_scale_to_zero"}]

[tool.poetry.dependencies]
python = "^3.10"
google-cloud-pubsub = "^2.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
pythonVersion = "3.10"